<resources>
    <string name="app_name">MovieNight</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Movie Night</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_button">INICIAR SESIÓN</string>
    <string name="search_navigation">Home</string>
    <string name="events_navigation">Eventos</string>
    <string name="your_library_navigation">Playlist</string>
    <string name="user_navigation">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mock_text">Mock Text</string>
    <string name="title_activity_title"></string>
    <string name="search_button_text">Search</string>
    <string name="plot_text">Synopsis</string>
    <string name="director_text">Director</string>
    <string name="cast_text">Cast</string>
    <string name="genre_text">Genre</string>
    <string name="rating_text">Rating</string>
    <string name="search_edit_text_hint">Película</string>
    <string name="title_activity_event">Eventos</string>
    <string name="title_activity_new_event">Crear Evento</string>
    <string name="new_event_name_hint">Nombre</string>
    <string name="new_event_location_hint">Lugar</string>
    <string name="add_playlist_button_text">Añadir PlayList</string>
    <string name="add_snacklist_button_text">Añadir SnackList</string>
    <string name="title_activity_playlists">PlaylistsActivity</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="title_activity_add_playlist">AddPlaylistActivity</string>
    <string name="title_activity_media_contens">MediaContensActivity</string>
    <string name="start_text">Invita a tus amigos y planea un MovieNight.</string>
    <string name="title_activity_login">INICIAR SESIÓN</string>
    <string name="new_event_fecha">Fecha</string>
</resources>